--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,16 +10,25 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.8.10"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3810jvsc74a57bd0916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1",
+   "display_name": "Python 3.8.10 64-bit"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,13 +47,50 @@
     "\n",
     "class Function:\n",
     "    def __call__(self, input):\n",
-    "        x = iput.data\n",
+    "        x = input.data\n",
     "        y = self.forward(x)\n",
     "        output = Variable(y)\n",
     "        return output\n",
     "\n",
     "    def forward(self, input):\n",
-    "        raise NotImplementedError()"
+    "        raise NotImplementedError()\n",
+    "\n",
+    "class Squre(Function):\n",
+    "    def forward(self, x):\n",
+    "        return x**2\n",
+    "\n",
+    "class Exp(Function):\n",
+    "    def forward(self, x):\n",
+    "        return np.exp(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def numerical_diff(f, x, eps=1e-4):\n",
+    "    return (f(Variable(x.data+eps)).data - f(Variable(x.data-eps)).data) / (2*eps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "4.000000000004\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = Squre()\n",
+    "x = Variable(np.array(2.0))\n",
+    "print(numerical_diff(f, x))"
    ]
   },
   {
@@ -52,9 +98,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "f = Function()"
-   ]
+   "source": []
   }
  ]
 }
