--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -28,19 +28,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import unittest\n",
     "import heapq as hq\n",
-    "import copy"
+    "import weakref"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
     "\n",
     "        while funcs:\n",
     "            f = hq.heappop(funcs)\n",
-    "            gys = [output.grad for output in f.outputs]\n",
+    "            gys = [output().grad for output in f.outputs]\n",
     "            gxs = f.backward(*gys)\n",
     "            if not isinstance(gxs, tuple):\n",
     "                gxs = (gxs, )\n",
@@ -113,10 +113,10 @@
     "        for output in outputs:\n",
     "            output.set_creator(self)\n",
     "        self.inputs = inputs\n",
-    "        self.outputs = outputs\n",
+    "        self.outputs = [weakref.ref(output) for output in outputs]\n",
     "        return outputs if len(outputs) > 1 else outputs[0]\n",
     "\n",
-    "    def __lt__(self, other): # generation heap\n",
+    "    def __lt__(self, other): # for generation heap\n",
     "        if self.generation > other.generation:\n",
     "            return True\n",
     "        return False\n",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -212,14 +212,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "32.0 64.0 16.0\n0 gen : [<class '__main__.Variable'>], 139890275991616 1 gen : [<class '__main__.Variable'>], 139890269812288 2 gen : [<class '__main__.Variable'>], 139890274367328 2 gen : [<class '__main__.Variable'>], 139890274368624 3 gen : [<class '__main__.Variable'>], 139890272660592\n"
+      "32.0 64.0 16.0\n0 gen : [<class '__main__.Variable'>], 139890257604672 1 gen : [<class '__main__.Variable'>], 139890257607120 2 gen : [<class '__main__.Variable'>], 139890257608368 2 gen : [<class '__main__.Variable'>], 139890274310080 3 gen : [<class '__main__.Variable'>], 139890274311808\n"
      ]
     }
    ],
@@ -236,10 +236,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Collecting memory_profiler\n",
+      "  Downloading memory_profiler-0.58.0.tar.gz (36 kB)\n",
+      "Collecting psutil\n",
+      "  Downloading psutil-5.8.0-cp38-cp38-manylinux2010_x86_64.whl (296 kB)\n",
+      "\u001b[K     |████████████████████████████████| 296 kB 1.0 MB/s \n",
+      "\u001b[?25hBuilding wheels for collected packages: memory-profiler\n",
+      "  Building wheel for memory-profiler (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for memory-profiler: filename=memory_profiler-0.58.0-py3-none-any.whl size=30182 sha256=8d67898d0999a1becc0a6e3eab7f1a2c84562ddb8879a4957be4db6654697d09\n",
+      "  Stored in directory: /home/cod3holic/.cache/pip/wheels/6a/37/3e/d9e8ebaf73956a3ebd2ee41869444dbd2a702d7142bcf93c42\n",
+      "Successfully built memory-profiler\n",
+      "Installing collected packages: psutil, memory-profiler\n",
+      "\u001b[33m  WARNING: The script mprof is installed in '/home/cod3holic/.local/bin' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n",
+      "Successfully installed memory-profiler-0.58.0 psutil-5.8.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install memory_profiler"
+   ]
   },
   {
    "cell_type": "code",
