--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -233,7 +233,7 @@
     "    def forward(self, x0, x1):\n",
     "        return x0 * x1\n",
     "    def backward(self, gy):\n",
-    "        x0, x1 = self.input[0].data, self.input[1].data\n",
+    "        x0, x1 = self.inputs[0].data, self.inputs[1].data\n",
     "        return x1*gy, x0*gy\n",
     "\n",
     "class Sub(Function):\n",
@@ -387,6 +387,74 @@
     "with no_grad():\n",
     "    x = Variable(np.array(2.0))\n",
     "    y = square(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "-5376.0 8064.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from dezero import Variable\n",
+    "\n",
+    "def goldstein(x, y):\n",
+    "    z = (1 + (x+y+1)**2 * (19 - 14*x + 3*x**2 - 14*y + 6*x*y + 3*y**2)) * (30 + (2*x - 3*y)**2 * (18 - 32*x + 12*x**2 + 48*y - 36*x*y + 27*y**2))\n",
+    "    return z\n",
+    "\n",
+    "x = Variable(np.array(1.0))\n",
+    "y = Variable(np.array(1.0))\n",
+    "z = goldstein(x, y)\n",
+    "z.backward()\n",
+    "print(x.grad, y.grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if '__file__' in globals():\n",
+    "    import os, sys\n",
+    "    sys.path.append(os.path.join(os.path.dirname(__file__), '..')) # 환경변수(PATH) 설정"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name '__file__' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_157289/2632168627.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdirname\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m__file__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name '__file__' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.path.dirname(__file__)"
    ]
   },
   {
