--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -430,10 +430,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "digraph g {\n139866525213456 [label=\"\", color=orange, style=filled]\n139866525213936 [label=\"Mul\", color=lightblue, style=filled, shape=box]\n139866525325488 -> 139866525213936\n139866525213792 -> 139866525213936\n139866525213936 -> 139866525213456\n139866525325488 [label=\"() float64\", color=orange, style=filled]\n139866525213792 [label=\"() float64\", color=orange, style=filled]\n139866525311424 [label=\"Add\", color=lightblue, style=filled, shape=box]\n139866525311232 -> 139866525311424\n139866525213408 -> 139866525311424\n139866525311424 -> 139866525213792\n139866525311232 [label=\"() float64\", color=orange, style=filled]\n139866525213408 [label=\"() int64\", color=orange, style=filled]\n139866525311568 [label=\"Mul\", color=lightblue, style=filled, shape=box]\n139866525323520 -> 139866525311568\n139866525311328 -> 139866525311568\n139866525311568 -> 139866525311232\n139866525323520 [label=\"() float64\", color=orange, style=filled]\n139866525311328 [label=\"() float64\", color=orange, style=filled]\n139866525312384 [label=\"Add\", color=lightblue, style=filled, shape=box]\n139866525311712 -> 139866525312384\n139866525312192 -> 139866525312384\n139866525312384 -> 139866525311328\n139866525311712 [label=\"() float64\", color=orange, style=filled]\n139866525312192 [label=\"() float64\", color=orange, style=filled]\n139866525311760 [label=\"Mul\", color=lightblue, style=filled, shape=box]\n139866525312288 -> 139866525311760\n139866525312528 -> 139866525311760\n139866525311760 -> 139866525312192\n139866525312288 [label=\"() float64\", color=orange, style=filled]\n139866525312528 [label=\"() int64\", color=orange, style=filled]\n139866525311904 [label=\"Pow\", color=lightblue, style=filled, shape=box]\n139866525361728 -> 139866525311904\n139866525311904 -> 139866525312288\n139866525361728 [label=\"() float64\", color=orange, style=filled]\n139866525311856 [label=\"Sub\", color=lightblue, style=filled, shape=box]\n139866525313056 -> 139866525311856\n139866525313536 -> 139866525311856\n139866525311856 -> 139866525311712\n139866525313056 [label=\"() float64\", color=orange, style=filled]\n139866525313536 [label=\"() float64\", color=orange, style=filled]\n139866525313344 [label=\"Mul\", color=lightblue, style=filled, shape=box]\n139866525313680 -> 139866525313344\n139866525361728 -> 139866525313344\n139866525313344 -> 139866525313536\n139866525313680 [label=\"() float64\", color=orange, style=filled]\n139866525361728 [label=\"() float64\", color=orange, style=filled]\n139866525312912 [label=\"Mul\", color=lightblue, style=filled, shape=box]\n139865907879168 -> 139866525312912\n139866525313104 -> 139866525312912\n139866525312912 -> 139866525313680\n139865907879168 [label=\"() float64\", color=orange, style=filled]\n139866525313104 [label=\"() int64\", color=orange, style=filled]\n139866525312816 [label=\"Add\", color=lightblue, style=filled, shape=box]\n139866525314400 -> 139866525312816\n139866525313008 -> 139866525312816\n139866525312816 -> 139866525313056\n139866525314400 [label=\"() float64\", color=orange, style=filled]\n139866525313008 [label=\"() float64\", color=orange, style=filled]\n139866525314064 [label=\"Mul\", color=lightblue, style=filled, shape=box]\n139866525361728 -> 139866525314064\n139866525314256 -> 139866525314064\n139866525314064 -> 139866525313008\n139866525361728 [label=\"() float64\", color=orange, style=filled]\n139866525314256 [label=\"() int64\", color=orange, style=filled]\n139866525313632 [label=\"Add\", color=lightblue, style=filled, shape=box]\n139866525314832 -> 139866525313632\n139866525312960 -> 139866525313632\n139866525313632 -> 139866525314400\n139866525314832 [label=\"() float64\", color=orange, style=filled]\n139866525312960 [label=\"() float64\", color=orange, style=filled]\n139866525313776 [label=\"Mul\", color=lightblue, style=filled, shape=box]\n139866525314112 -> 139866525313776\n139866525313824 -> 139866525313776\n139866525313776 -> 139866525312960\n139866525314112 [label=\"() float64\", color=orange, style=filled]\n139866525313824 [label=\"() int64\", color=orange, style=filled]\n139866525315024 [label=\"Pow\", color=lightblue, style=filled, shape=box]\n139865907879168 -> 139866525315024\n139866525315024 -> 139866525314112\n139865907879168 [label=\"() float64\", color=orange, style=filled]\n139866525313248 [label=\"Sub\", color=lightblue, style=filled, shape=box]\n139866525314976 -> 139866525313248\n139866525313920 -> 139866525313248\n139866525313248 -> 139866525314832\n139866525314976 [label=\"() int64\", color=orange, style=filled]\n139866525313920 [label=\"() float64\", color=orange, style=filled]\n139866525323472 [label=\"Mul\", color=lightblue, style=filled, shape=box]\n139865907879168 -> 139866525323472\n139866525314928 -> 139866525323472\n139866525323472 -> 139866525313920\n139865907879168 [label=\"() float64\", color=orange, style=filled]\n139866525314928 [label=\"() int64\", color=orange, style=filled]\n139866525324672 [label=\"Pow\", color=lightblue, style=filled, shape=box]\n139866525324480 -> 139866525324672\n139866525324672 -> 139866525323520\n139866525324480 [label=\"() float64\", color=orange, style=filled]\n139866525324816 [label=\"Sub\", color=lightblue, style=filled, shape=box]\n139866525323952 -> 139866525324816\n139866525324240 -> 139866525324816\n139866525324816 -> 139866525324480\n139866525323952 [label=\"() float64\", color=orange, style=filled]\n139866525324240 [label=\"() float64\", color=orange, style=filled]\n139866525324192 [label=\"Mul\", color=lightblue, style=filled, shape=box]\n139866525361728 -> 139866525324192\n139866525324048 -> 139866525324192\n139866525324192 -> 139866525324240\n139866525361728 [label=\"() float64\", color=orange, style=filled]\n139866525324048 [label=\"() int64\", color=orange, style=filled]\n139866525325680 [label=\"Mul\", color=lightblue, style=filled, shape=box]\n139865907879168 -> 139866525325680\n139866525324144 -> 139866525325680\n139866525325680 -> 139866525323952\n139865907879168 [label=\"() float64\", color=orange, style=filled]\n139866525324144 [label=\"() int64\", color=orange, style=filled]\n139866525325248 [label=\"Add\", color=lightblue, style=filled, shape=box]\n139866525325056 -> 139866525325248\n139866525325824 -> 139866525325248\n139866525325248 -> 139866525325488\n139866525325056 [label=\"() float64\", color=orange, style=filled]\n139866525325824 [label=\"() int64\", color=orange, style=filled]\n139866525325200 [label=\"Mul\", color=lightblue, style=filled, shape=box]\n139866525334880 -> 139866525325200\n139866525324768 -> 139866525325200\n139866525325200 -> 139866525325056\n139866525334880 [label=\"() float64\", color=orange, style=filled]\n139866525324768 [label=\"() float64\", color=orange, style=filled]\n139866525325152 [label=\"Add\", color=lightblue, style=filled, shape=box]\n139866525326400 -> 139866525325152\n139866525326880 -> 139866525325152\n139866525325152 -> 139866525324768\n139866525326400 [label=\"() float64\", color=orange, style=filled]\n139866525326880 [label=\"() float64\", color=orange, style=filled]\n139866525326448 [label=\"Mul\", color=lightblue, style=filled, shape=box]\n139866525326928 -> 139866525326448\n139866525326688 -> 139866525326448\n139866525326448 -> 139866525326880\n139866525326928 [label=\"() float64\", color=orange, style=filled]\n139866525326688 [label=\"() int64\", color=orange, style=filled]\n139866525326256 [label=\"Pow\", color=lightblue, style=filled, shape=box]\n139866525361728 -> 139866525326256\n139866525326256 -> 139866525326928\n139866525361728 [label=\"() float64\", color=orange, style=filled]\n139866525326160 [label=\"Add\", color=lightblue, style=filled, shape=box]\n139866525331856 -> 139866525326160\n139866525326352 -> 139866525326160\n139866525326160 -> 139866525326400\n139866525331856 [label=\"() float64\", color=orange, style=filled]\n139866525326352 [label=\"() float64\", color=orange, style=filled]\n139866525327264 [label=\"Mul\", color=lightblue, style=filled, shape=box]\n139866525327216 -> 139866525327264\n139866525361728 -> 139866525327264\n139866525327264 -> 139866525326352\n139866525327216 [label=\"() float64\", color=orange, style=filled]\n139866525361728 [label=\"() float64\", color=orange, style=filled]\n139866525324336 [label=\"Mul\", color=lightblue, style=filled, shape=box]\n139865907879168 -> 139866525324336\n139866525327120 -> 139866525324336\n139866525324336 -> 139866525327216\n139865907879168 [label=\"() float64\", color=orange, style=filled]\n139866525327120 [label=\"() int64\", color=orange, style=filled]\n139866525332048 [label=\"Sub\", color=lightblue, style=filled, shape=box]\n139866525331952 -> 139866525332048\n139866525332288 -> 139866525332048\n139866525332048 -> 139866525331856\n139866525331952 [label=\"() float64\", color=orange, style=filled]\n139866525332288 [label=\"() float64\", color=orange, style=filled]\n139866525332000 [label=\"Mul\", color=lightblue, style=filled, shape=box]\n139866525361728 -> 139866525332000\n139866525332144 -> 139866525332000\n139866525332000 -> 139866525332288\n139866525361728 [label=\"() float64\", color=orange, style=filled]\n139866525332144 [label=\"() int64\", color=orange, style=filled]\n139866525332912 [label=\"Add\", color=lightblue, style=filled, shape=box]\n139866525332192 -> 139866525332912\n139866525333104 -> 139866525332912\n139866525332912 -> 139866525331952\n139866525332192 [label=\"() float64\", color=orange, style=filled]\n139866525333104 [label=\"() float64\", color=orange, style=filled]\n139866525333056 [label=\"Mul\", color=lightblue, style=filled, shape=box]\n139866525332720 -> 139866525333056\n139866525333344 -> 139866525333056\n139866525333056 -> 139866525333104\n139866525332720 [label=\"() float64\", color=orange, style=filled]\n139866525333344 [label=\"() int64\", color=orange, style=filled]\n139866525332480 [label=\"Pow\", color=lightblue, style=filled, shape=box]\n139865907879168 -> 139866525332480\n139866525332480 -> 139866525332720\n139865907879168 [label=\"() float64\", color=orange, style=filled]\n139866525333920 [label=\"Sub\", color=lightblue, style=filled, shape=box]\n139866525333008 -> 139866525333920\n139866525334112 -> 139866525333920\n139866525333920 -> 139866525332192\n139866525333008 [label=\"() int64\", color=orange, style=filled]\n139866525334112 [label=\"() float64\", color=orange, style=filled]\n139866525335312 [label=\"Mul\", color=lightblue, style=filled, shape=box]\n139865907879168 -> 139866525335312\n139866525334352 -> 139866525335312\n139866525335312 -> 139866525334112\n139865907879168 [label=\"() float64\", color=orange, style=filled]\n139866525334352 [label=\"() int64\", color=orange, style=filled]\n139866525344624 [label=\"Pow\", color=lightblue, style=filled, shape=box]\n139866525345296 -> 139866525344624\n139866525344624 -> 139866525334880\n139866525345296 [label=\"() float64\", color=orange, style=filled]\n139865907762320 [label=\"Add\", color=lightblue, style=filled, shape=box]\n139866525361824 -> 139865907762320\n139866525344528 -> 139865907762320\n139865907762320 -> 139866525345296\n139866525361824 [label=\"() float64\", color=orange, style=filled]\n139866525344528 [label=\"() int64\", color=orange, style=filled]\n139866525362304 [label=\"Add\", color=lightblue, style=filled, shape=box]\n139865907879168 -> 139866525362304\n139866525361728 -> 139866525362304\n139866525362304 -> 139866525361824\n139865907879168 [label=\"() float64\", color=orange, style=filled]\n139866525361728 [label=\"() float64\", color=orange, style=filled]\n}\ndot /home/cod3holic/.dezero/tmp_graph.dot -T png -o dot.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import subprocess\n",
+    "\n",
+    "def _dot_var(v, verbose=False):\n",
+    "    name = '' if v.name is None else v.name\n",
+    "    if verbose and v.data is not None:\n",
+    "        if v.name is not None:\n",
+    "            name += ':'\n",
+    "        name += str(v.shape) + ' ' + str(v.dtype)\n",
+    "    return f'{id(v)} [label=\"{name}\", color=orange, style=filled]\\n'\n",
+    "\n",
+    "def _dot_func(f):\n",
+    "    txt = f'{id(f)} [label=\"{f.__class__.__name__}\", color=lightblue, style=filled, shape=box]\\n'\n",
+    "    \n",
+    "    dot_edge = '{} -> {}\\n'\n",
+    "    for x in f.inputs:\n",
+    "        txt += dot_edge.format(id(x), id(f))\n",
+    "    for y in f.outputs:\n",
+    "        txt += dot_edge.format(id(f), id(y()))\n",
+    "    return txt\n",
+    "\n",
+    "def get_dot_graph(output, verbose=True):\n",
+    "    txt = ''\n",
+    "    seen_set = set()\n",
+    "    funcs = []\n",
+    "\n",
+    "    def add_func(f):\n",
+    "        if f not in seen_set:\n",
+    "            seen_set.add(f)\n",
+    "            funcs.append(f)\n",
+    "    \n",
+    "    add_func(output.creator)\n",
+    "    txt += _dot_var(output)\n",
+    "\n",
+    "    while funcs:\n",
+    "        f = funcs.pop()\n",
+    "        txt += _dot_func(f)\n",
+    "        for x in f.inputs:\n",
+    "            txt += _dot_var(x, verbose=verbose)\n",
+    "            if x.creator is not None:\n",
+    "                add_func(x.creator)\n",
+    "\n",
+    "    return 'digraph g {\\n' + txt + '}'\n",
+    "\n",
+    "def plot_dot_graph(output, verbose=True, to_file='dot.png'):\n",
+    "    dot_graph = get_dot_graph(output, verbose)\n",
+    "    tmp_dir = os.path.join(os.path.expanduser('~'), '.dezero')\n",
+    "    if not os.path.exists(tmp_dir):\n",
+    "        os.mkdir(tmp_dir)\n",
+    "    graph_path = os.path.join(tmp_dir, 'tmp_graph.dot')\n",
+    "\n",
+    "    with open(graph_path, 'w') as f:\n",
+    "        f.write(dot_graph)\n",
+    "    \n",
+    "    extension = os.path.splitext(to_file)[1][1:]\n",
+    "    cmd = f'dot {graph_path} -T {extension} -o {to_file}'\n",
+    "    print(cmd)\n",
+    "    subprocess.run(cmd, shell=True)\n",
+    "\n",
+    "print(get_dot_graph(z))\n",
+    "plot_dot_graph(z)"
+   ]
   },
   {
    "cell_type": "code",
@@ -466,19 +536,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Requirement already satisfied: memory_profiler in /home/cod3holic/.local/lib/python3.8/site-packages (0.58.0)\nRequirement already satisfied: psutil in /home/cod3holic/.local/lib/python3.8/site-packages (from memory_profiler) (5.8.0)\n"
+      "Requirement already satisfied: memory_profiler in /home/cod3holic/.local/lib/python3.8/site-packages (0.58.0)\n",
+      "Requirement already satisfied: psutil in /home/cod3holic/.local/lib/python3.8/site-packages (from memory_profiler) (5.8.0)\n",
+      "[sudo] password for cod3holic: \n"
      ]
     }
    ],
    "source": [
-    "!pip install memory_profiler"
+    "!pip install memory_profiler\n",
+    "!apt install graphviz"
    ]
   }
  ]
